bugfix sub form on mobile display

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -473,4 +473,8 @@ body {
     #team .member {
         display: block;
     }
+
+    .newsletter-subscribe {
+        width: 100%;
+    }
 }
